feat: pathパラメータの定義を追加
